# WindowsRichNotifications

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: unit-tests-windows.yml
test/: test.py
tests/: __main__.py  test_ToastNotifier.py  test_WindowsNotifier.py  test_basic.py
windowsrichnotifications/: __main__.py
winrichnotify/: __init__.py  __main__.py
